--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="bottom_sheet_peek_height">500dp</dimen>
+    <dimen name="recycler_view_item_spacing">16dp</dimen>
 </resources>
