--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -19,8 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@color/orange"
             android:elevation="4dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:padding="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
