R: Update some ui and fix some issue with voice and chatbot

--- a/app/src/main/res/layout/reciever_view.xml
+++ b/app/src/main/res/layout/reciever_view.xml
@@ -41,6 +41,7 @@
             android:backgroundTint="#e2e5de"
             app:cardCornerRadius="38dp">
 
+
             <TextView
                 android:id="@+id/receiver_text"
                 android:layout_width="wrap_content"
@@ -48,7 +49,15 @@
                 android:layout_gravity="center"
                 android:layout_margin="18dp"
                 android:textStyle="bold"
-                android:text="Hello, I am Chatbot" />
+                android:text="Hello, I am Enchante" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chip_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="16dp"
+                android:orientation="horizontal"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
@@ -58,5 +67,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/time"
         android:layout_marginLeft="100dp"
+        android:textColor="@color/black"
         android:text="9:30 PM" />
 </RelativeLayout>
